# imagefilters

./: .gitignore  CMakeLists.txt  README.md  filter.cc
src/: filter.cc
